# ap-e2025-pub

./: README.md
week1/: README.md
week3/: README.md
week4/lec-thu/: Monads.hs
week5/: README.md
week5/handout/: week5.cabal
week5/lec-thu/: Concurrency.hs
week5/solution/src/: SPC.hs  SPC_Tests.hs
week6/: README.md
week6/handout/: week6.cabal
week6/lec-thu/: Testing.hs
week6/solution/src/APL/: AST.hs
week7/: README.md
week7/handout/: viewer.hs  week7.cabal
week7/handout/src/: Tests.hs
week7/handout/src/BlockAutomaton/: RPS.hs  Rules.hs  Simulation.hs
week7/lec-thu/: unsafe.hs
week7/solution/: viewer.hs  week7.cabal
week7/solution/src/: Tests.hs
week7/solution/src/BlockAutomaton/: RPS.hs  Rules.hs  Simulation.hs
