cabal-version:      3.0
name:               week7
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall -fno-omit-yields

library
    import: common
    hs-source-dirs: src
    build-depends:
        base
      , megaparsec
      , tasty
      , tasty-hunit
      , random
    exposed-modules:
        BlockAutomaton.Simulation
        BlockAutomaton.Rules
        BlockAutomaton.RPS
        Tests

test-suite week7-test
    import: common
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , week7

executable viewer
    import: common
    main-is: viewer.hs
    build-depends:
        base
      , week7
      , random
